# ai-rust-coding-agent1

./: .gitignore  COMPLETE_SETUP_GUIDE.md  Cargo.toml  README.md  setup.sh
assistant_agent/: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/agent/: assistant.rs  chain.rs  mod.rs  personality.rs
src/cli/: ui.rs
src/config/: settings.rs
src/knowledge/: documents.rs  embeddings.rs  mod.rs  vectorstore.rs
src/llm/: mod.rs  ollama.rs  types.rs
src/memory/: conversation.rs  mod.rs  storage.rs
src/utils/: file.rs
