[package]
name = "assistant_agent"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A scalable personal assistant agent using local LLMs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for Ollama API
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Vector database - Using simple in-memory/file-based approach
# For scalability, switch to Qdrant later
sled = "0.34"  # Embedded key-value store
bincode = "1.3"  # Binary serialization

# Text processing
regex = "1.10"
unicode-segmentation = "1.10"

# File operations
walkdir = "2.4"
mime_guess = "2.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Hashing for embeddings
blake3 = "1.5"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"

[[bin]]
name = "assistant"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
